# weather-model-graphs

./: .cirun.yml  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  NOTEBOOK_UPDATES.md  README.md  isolated_nodes_demo.ipynb  pr62.patch  pyproject.toml  test_issue_40.py  test_issue_44.py  visualize_fix_40.py
.github/: pull_request_template.md
.github/workflows/: benchmark-regression.yml  ci-tests.yml  deploy-docs-book.yml  performance.yml  pre-commit.yml
docs/: _config.yml  _toc.yml  advanced_features.ipynb  background.ipynb  constructing_the_graph.ipynb  creating_the_graph.ipynb  decoding_mask.ipynb  design.ipynb  design_v0_4.ipynb  distance_metric_auto_detection.ipynb  equator_line_1d.ipynb  example_plot.py  filtering_graphs.ipynb  icon_grids.ipynb  icosahedral_global_graph.ipynb  icosahedral_global_graph_internals.ipynb  icosahedral_global_graph_usage.ipynb  intro.md  lat_lons.ipynb  mesh_cropping.ipynb  mesh_layout.ipynb  ml_pipeline.ipynb  prebuilt_mesh.ipynb  saving_graphs_for_neural_lam.ipynb  xr_datatree_format.ipynb
docs/internals/: icosahedral_global_graph_internals.ipynb  icosahedral_global_graph_usage.ipynb
docs/saved_graphs/: icosahedral_graph.pkl
examples/: benchmark_graph_build_backend.py  config_graphcast.yaml  config_keisler.yaml  example_1_prebuilt.py  example_2_config.py  example_3_temporal.py  example_4_features.py  example_5_spatial_indexing.py  example_6_ml_pipeline.py  my_config.yaml
src/poseidon_graphprep/: __init__.py
src/poseidon_graphs/: __init__.py
src/weather_model_graphs/: __init__.py  backend.py  backends.py  config.py  diagnostics.py  features.py  filtering.py  graph_adaptive.py  labelling.py  load.py  ml_integration.py  networkx_utils.py  old.py  prebuilt.py  save.py  spatial.py  spatial_index.py  spherical_utils.py  split.py  temporal.py  validator.py
tests/: test_connect_nodes_across_graphs.py  test_connect_nodes_vectorized.py  test_connectivity_checks.py  test_cugraph_backend_compat.py  test_filtering.py  test_graph_creation.py  test_graph_decode_gridpoints_mask.py  test_graph_plot_3d.py  test_graph_plots.py  test_graph_to_xr_datatree.py  test_graph_utils.py  test_haversine.py  test_icon_grid.py  test_icosahedral.py  test_isolated_nodes.py  test_mesh_layout.py  test_prebuilt_mesh.py  test_readme.py  test_save.py  test_save_torch_tensors.py  test_spatial_index.py  test_spherical_coords.py  test_spherical_utils.py  test_triangular_mesh.py  test_validator.py  utils.py
tests/benchmarks/: README.md  benchmark_graph_build_backend.py  check_regression.py  compare.py  (+4 more)
(+50 files in other folders)
