[project]
name = "weather-model-graphs"
version = "0.2.0"
description = "Tools for creating and visualising data-driven weather model graphs"
authors = [
    {name = "Leif Denby", email = "lcd@dmi.dk"},
]
dependencies = [
    "numpy>=1.26.4",
    "loguru>=0.7.2",
    "networkx>=3.3",
    "scipy>=1.13.0",
    "pyproj>=3.7.0",
    "xarray>=2025.3.1",
    "zarr>=2.18.3",
    "netcdf4>=1.7.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]
pytorch = [
    "torch>=2.3.0",
    "torch-geometric>=2.5.3",
]
visualisation = [
    "matplotlib>=3.8.4",
    "ipykernel>=6.29.4",
    "cartopy>=0.24.1",
]
docs = [
    "jupyter-book>=1.0.0",
    "sphinxcontrib-mermaid>=0.9.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.0",
    "nbval>=0.11.0",
    "ipdb>=0.13.13",
]
