[project]
name = "weather-model-graphs"
version = "0.3.0"
description = "Tools for creating and visualising data-driven weather model graphs"
authors = [
    {name = "Leif Denby", email = "lcd@dmi.dk"},
]
dependencies = [
    "numpy>=1.26.4",
    "loguru>=0.7.2",
    "networkx>=3.3",
    "scipy>=1.13.0",
    "pyproj>=3.7.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]
pytorch = [
    "torch>=2.3.0",
    "torch-geometric>=2.5.3",
]
dgl = [
    "dgl>=1.0.0",
    "torch>=2.3.0",
]
visualisation = [
    "matplotlib>=3.8.4",
    "ipykernel>=6.29.4",
    "cartopy>=0.24.1",
    "plotly>=5.0.0",
]
config = [
    "pyyaml>=6.0",
]
ml = [
    "torch>=2.3.0",
    "torch-geometric>=2.5.3",
    "scikit-learn>=1.3.0",
]
docs = [
    "jupyter-book>=1.0.0",
    "sphinxcontrib-mermaid>=0.9.2",
]
all = [
    "torch>=2.3.0",
    "torch-geometric>=2.5.3",
    "dgl>=1.0.0",
    "matplotlib>=3.8.4",
    "ipykernel>=6.29.4",
    "cartopy>=0.24.1",
    "plotly>=5.0.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "jupyter-book>=1.0.0",
    "sphinxcontrib-mermaid>=0.9.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"

[tool.pdm]
distribution = true


[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "nbval>=0.11.0",
    "ipdb>=0.13.13",
    "pre-commit>=4.3.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.75.0",
]
